# Taurus

./: CMakeLists.txt  ChangeLog.txt  LICENSE  README.md
batch/: debug_x86_01_build.bat  debug_x86_02_deployqt.bat  x86_02_deployqt.bat
installer/: Taurus.iss  Taurus_license_ko.rtf
src/: CMakeLists.txt  main.cpp  taurus_constants.h
src/formFiles/: MainWindow.ui
src/mainUI/: MainWindow.cpp  MainWindow.h  MgrCSV.cpp  MgrCSV.h  MgrLotto.cpp  MgrLotto.h  StatColor.cpp  StatColor.h  StatContinue.cpp  StatContinue.h  StatNumber.cpp  StatNumber.h  StatPeriod.cpp  StatPeriod.h  StatSection.cpp  StatSection.h  StatSniffling.cpp  StatSniffling.h
src/misc/: LimitDate.cpp  LimitDate.h  ProgressWidget.cpp  ProgressWidget.h  SettingData.cpp  SettingData.h  TinyAES.cpp  TinyAES.h
src/qtcsv/: abstractdata.h  reader.cpp  reader.h  stringdata.h  variantdata.h  writer.cpp  writer.h
src/resFiles/: resources.qrc
